comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso de HTML5 e CSS3</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>HTML5</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia sequi tenetur, quis quas ratione sunt voluptate! Enim corrupti optio, soluta, voluptate temporibus recusandae dolore porro molestiae rem tenetur magnam?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora ipsam sapiente possimus, quasi suscipit molestiae mollitia placeat. Soluta, eligendi repellendus. Magnam fugit expedita ex similique quibusdam laborum officia corporis odio?</p>
         </article>
     </main>
 </body>
