--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site2</title>
+    <title>Cursos Grátis</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <header>
             <h1>Curso de HTML5 e CSS3</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
-            <h2>HTML5</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia sequi tenetur, quis quas ratione sunt voluptate! Enim corrupti optio, soluta, voluptate temporibus recusandae dolore porro molestiae rem tenetur magnam?</p>
+            <h2>HTML5 e CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="cursohtml.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
-            <h2>CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora ipsam sapiente possimus, quasi suscipit molestiae mollitia placeat. Soluta, eligendi repellendus. Magnam fugit expedita ex similique quibusdam laborum officia corporis odio?</p>
+            <h2>JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
+            <p><a href="cursojs.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
